@@ -1,7 +1,7 @@
-# -*- makefile -*- Time-stamp: <06/09/29 22:09:31 ptr>
+# -*- makefile -*- Time-stamp: <06/10/10 15:22:33 ptr>
 
 PRGNAME = stem_ut
 SRC_CC = unit_test.cc \
          Node.cc \
-         NameService.cc
-
+         NameService.cc \
+         Echo.cc
